# dexscrew-repro

./: HYDRA_CONFIG_ANALYSIS.md  README.md  TASK2_DETAILED_ANALYSIS.md  TASK3_FILE_CHANGES_AND_MINIMAL_PATH.md  calc_palm_offset.py  inspect_options.py
assets/dexh13_right_description/: CMakeLists.txt  package.xml
assets/dexh13_right_description/launch/: display.launch  display.launch.py
assets/dexh13_right_description/meshes/: right_index_link_1.STL  right_index_link_1_approx.STL  right_index_link_2_approx.STL  right_index_link_3_approx.STL  right_index_tactile_link_0_approx.STL  right_index_tactile_link_1.STL  right_index_tactile_link_1_approx.STL  right_middle_link_0_approx.STL  right_middle_link_1.STL  right_middle_link_1_approx.STL  right_middle_link_2_approx.STL  right_middle_link_3_approx.STL  right_middle_tactile_link_0_approx.STL  right_middle_tactile_link_1_approx.STL  right_palm_link_approx.STL  right_ring_link_1_approx.STL  right_ring_link_2_approx.STL  right_ring_link_3.STL  right_ring_link_3_approx.STL  right_ring_tactile_link_1_approx.STL  right_ring_tactile_link_2_approx.STL  right_thumb_link_0.STL  right_thumb_link_0_approx.STL  right_thumb_link_1_approx.STL  right_thumb_link_2.STL  right_thumb_link_2_approx.STL  right_thumb_link_3_approx.STL  right_thumb_tactile_link_0_approx.STL  right_thumb_tactile_link_1_approx.STL
assets/dexh13_right_description/urdf/: dexh13_right_fix_path.urdf  urdf说明.md
docs/: debug.md  dexh13_right_description2_changes.md
scripts/: debug_pasini_env.py  debug_pasini_env.sh  pasini_bulb_teacher.sh  pasini_screwdriver_teacher.sh  pasini_screwdriver_teacher_debug.sh  screwdriver_student_padapt.sh  screwdriver_teacher.sh  vis_pasini_bulb_teacher.sh  (+3 more)
(+41 files in other folders)
