<?xml version="1.0"?>
<package format="3">
  <name>dexh13_right_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for dexh13_right_description</p>
    <p>This package contains configuration data, 3D models and launch files
for dexh13_right robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>